--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [dev]
-framework = “next”
-command = “npm run dev”
+framework = "next"
+command = "npm run dev"
 
 [build]
   command = "npm run build"
